[gd_scene load_steps=9 format=4 uid="uid://blqbs5g1aiy8m"]

[ext_resource type="Script" uid="uid://dxcv0djhl5kcv" path="res://src/Levels/Level1/rooms/room_3.gd" id="1_fdb5r"]
[ext_resource type="TileSet" uid="uid://5gomx1uvq0tm" path="res://src/Levels/Level1/rooms/shared/buildingTileSet.tres" id="1_ow6v7"]
[ext_resource type="TileSet" uid="uid://cp1nkfymf0wa5" path="res://src/Levels/Level1/rooms/shared/groundTileSet.tres" id="3_77cwb"]
[ext_resource type="PackedScene" uid="uid://dekcjwb6n7f7q" path="res://src/Levels/Shared/bridge.tscn" id="4_ajfhn"]
[ext_resource type="PackedScene" uid="uid://d2m1rekr4ryxw" path="res://src/Levels/Shared/handle.tscn" id="5_ojdwi"]
[ext_resource type="PackedScene" uid="uid://b5veltma7osxs" path="res://src/Levels/Shared/drone.tscn" id="6_i0xx1"]
[ext_resource type="PackedScene" uid="uid://cev5kgjc2i55p" path="res://src/Levels/Shared/wastes.tscn" id="7_dii1g"]
[ext_resource type="PackedScene" uid="uid://cgrgdyiml1kax" path="res://src/Levels/Shared/burger.tscn" id="8_5bdwh"]

[node name="Room3" type="Node2D"]
script = ExtResource("1_fdb5r")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_right = 480.0
offset_bottom = 400.0
color = Color(0, 0.156863, 0.321569, 1)

[node name="decor" type="Node2D" parent="."]

[node name="building" type="TileMapLayer" parent="decor"]
use_parent_material = true
position = Vector2(0, 16)
tile_map_data = PackedByteArray("AAABAAYAAAAEAAIAAAACAAYAAAAFAAIAAAADAAYAAAAGAAIAAAADAAUAAAAGAAEAAAADAAQAAAAGAAEAAAADAAMAAAAGAAEAAAACAAUAAAAFAAEAAAACAAQAAAAFAAEAAAABAAQAAAAEAAEAAAABAAUAAAAEAAEAAAABAAMAAAAEAAEAAAACAAMAAAAFAAEAAAAKAAYAAAAAAAIAAAALAAYAAAABAAIAAAANAAYAAAACAAIAAAAMAAYAAAABAAIAAAANAAUAAAACAAEAAAANAAQAAAACAAEAAAAMAAQAAAABAAEAAAAMAAUAAAABAAEAAAALAAUAAAABAAEAAAALAAQAAAABAAEAAAAKAAQAAAAAAAEAAAAKAAUAAAAAAAEAAAAKAAMAAAAAAAEAAAALAAMAAAABAAEAAAAMAAMAAAABAAEAAAANAAMAAAACAAEAAAABAAIAAAAEAAAAAAAKAAIAAAAAAAAAAAANAAIAAAACAAAAAAADAAIAAAAGAAAAAAAMAAIAAAABAAAAAAALAAIAAAABAAAAAAACAAIAAAAFAAAAAAA=")
tile_set = ExtResource("1_ow6v7")
rendering_quadrant_size = 46

[node name="Ground" type="TileMapLayer" parent="decor" groups=["ground"]]
use_parent_material = true
tile_map_data = PackedByteArray("AAAAAA4AAQAAAAEAAAAJAA4AAQAAAAEAAAAAAA0AAQAAAAEAAAAJAA0AAQAAAAEAAAAAAAsAAQAAAAEAAAAJAAsAAQAAAAEAAAAAAAoAAQAAAAAAAAAJAAoAAQAAAAAAAAAAAAwAAQAAAAEAAAAJAAwAAQAAAAEAAAACAA8AAQAAAAEAAAABAA8AAQAAAAEAAAAAAA8AAQAAAAEAAAADAA8AAQAAAAEAAAAEAA8AAQAAAAEAAAAFAA8AAQAAAAEAAAAJAA8AAQAAAAEAAAAAABAAAQAAAAEAAAABABEAAQAAAAEAAAACABEAAQAAAAEAAAACABIAAQAAAAEAAAADABMAAQAAAAEAAAAEABMAAQAAAAEAAAAEABQAAQAAAAEAAAAFABQAAQAAAAEAAAAGABQAAQAAAAEAAAAHABUAAQAAAAEAAAAHABQAAQAAAAEAAAAHABMAAQAAAAEAAAAGABMAAQAAAAEAAAAAABEAAQAAAAEAAAAAABIAAQAAAAEAAAAAABMAAQAAAAEAAAAAABQAAQAAAAEAAAAAABUAAQAAAAEAAAAAABYAAQAAAAEAAAAAABcAAQAAAAEAAAABABAAAQAAAAEAAAABABIAAQAAAAEAAAABABMAAQAAAAEAAAABABQAAQAAAAEAAAABABUAAQAAAAEAAAABABYAAQAAAAEAAAABABcAAQAAAAEAAAACABAAAQAAAAEAAAACABMAAQAAAAEAAAACABQAAQAAAAEAAAACABUAAQAAAAEAAAACABYAAQAAAAEAAAACABcAAQAAAAEAAAADABAAAQAAAAEAAAADABEAAQAAAAEAAAADABIAAQAAAAEAAAADABQAAQAAAAEAAAADABUAAQAAAAEAAAADABYAAQAAAAEAAAADABcAAQAAAAEAAAAEABAAAQAAAAEAAAAEABEAAQAAAAEAAAAEABIAAQAAAAEAAAAEABUAAQAAAAEAAAAEABYAAQAAAAEAAAAEABcAAQAAAAEAAAAFABAAAQAAAAEAAAAFABEAAQAAAAEAAAAFABIAAQAAAAEAAAAFABMAAQAAAAEAAAAFABUAAQAAAAEAAAAFABYAAQAAAAEAAAAFABcAAQAAAAEAAAAGABAAAQAAAAEAAAAGABEAAQAAAAEAAAAGABIAAQAAAAEAAAAGABUAAQAAAAEAAAAGABYAAQAAAAEAAAAGABcAAQAAAAEAAAAHABAAAQAAAAEAAAAHABEAAQAAAAEAAAAHABIAAQAAAAEAAAAHABYAAQAAAAEAAAAHABcAAQAAAAEAAAAIABAAAQAAAAEAAAAIABEAAQAAAAEAAAAIABIAAQAAAAEAAAAIABMAAQAAAAEAAAAIABQAAQAAAAEAAAAIABUAAQAAAAEAAAAIABYAAQAAAAEAAAAIABcAAQAAAAEAAAAJABAAAQAAAAEAAAAJABEAAQAAAAEAAAAJABIAAQAAAAEAAAAJABMAAQAAAAEAAAAJABQAAQAAAAEAAAAJABUAAQAAAAEAAAAJABYAAQAAAAEAAAAJABcAAQAAAAEAAAABAAoAAQABAAAAAAACAAoAAQABAAAAAAADAAoAAQABAAAAAAABAAsAAQAAAAEAAAACAAsAAQAAAAEAAAADAAsAAQAAAAEAAAADAAwAAQAAAAEAAAADAA0AAQAAAAEAAAADAA4AAQAAAAEAAAACAA4AAQAAAAEAAAACAA0AAQAAAAEAAAACAAwAAQAAAAEAAAABAAwAAQAAAAEAAAABAA0AAQAAAAEAAAABAA4AAQAAAAEAAAAKAAoAAQAAAAAAAAALAAoAAQAAAAAAAAAMAAoAAQAAAAAAAAANAAoAAQAAAAAAAAAOAAoAAQAAAAAAAAAKAAsAAQAAAAEAAAALAAsAAQAAAAEAAAAMAAsAAQAAAAEAAAANAAsAAQAAAAEAAAAOAAsAAQAAAAEAAAAOAAwAAQAAAAEAAAAOAA0AAQAAAAEAAAANAA0AAQAAAAEAAAANAA4AAQAAAAEAAAAMAA4AAQAAAAEAAAAMAA0AAQAAAAEAAAALAA0AAQAAAAEAAAALAAwAAQAAAAEAAAAKAAwAAQAAAAEAAAAMAAwAAQAAAAEAAAANAAwAAQAAAAEAAAAKAA0AAQAAAAEAAAAKAA4AAQAAAAEAAAALAA4AAQAAAAEAAAALAA8AAQAAAAEAAAAKAA8AAQAAAAEAAAAKABAAAQAAAAEAAAALABAAAQAAAAEAAAAMABAAAQAAAAEAAAANABAAAQAAAAEAAAANAA8AAQAAAAEAAAAOAA8AAQAAAAEAAAAOAA4AAQAAAAEAAAAMAA8AAQAAAAEAAAAOABAAAQAAAAEAAAAKABEAAQAAAAEAAAALABEAAQAAAAEAAAAMABEAAQAAAAEAAAANABEAAQAAAAEAAAAOABEAAQAAAAEAAAAOABIAAQAAAAEAAAAOABMAAQAAAAEAAAANABMAAQAAAAEAAAAMABQAAQAAAAEAAAALABQAAQAAAAEAAAAKABQAAQAAAAEAAAAKABMAAQAAAAEAAAALABMAAQAAAAEAAAALABIAAQAAAAEAAAAMABIAAQAAAAEAAAANABIAAQAAAAEAAAAKABIAAQAAAAEAAAAOABQAAQAAAAEAAAAOABUAAQAAAAEAAAAOABYAAQAAAAEAAAAOABcAAQAAAAEAAAAOABgAAQABAAEAAAANABgAAQABAAEAAAAMABgAAQABAAEAAAALABgAAQABAAEAAAAKABgAAQABAAEAAAAKABcAAQAAAAEAAAAKABYAAQAAAAEAAAALABYAAQAAAAEAAAALABUAAQAAAAEAAAAMABUAAQAAAAEAAAAKABUAAQAAAAEAAAAMABMAAQAAAAEAAAANABQAAQAAAAEAAAANABUAAQAAAAEAAAANABYAAQAAAAEAAAANABcAAQAAAAEAAAAMABcAAQAAAAEAAAALABcAAQAAAAEAAAAMABYAAQAAAAEAAAAAABgAAQABAAEAAAAAABkAAQABAAEAAAAAABoAAQABAAEAAAAAABsAAQABAAEAAAAAABwAAQABAAEAAAAAAB0AAQABAAEAAAABABgAAQABAAEAAAABABkAAQABAAEAAAABABoAAQABAAEAAAABABsAAQABAAEAAAABABwAAQABAAEAAAABAB0AAQABAAEAAAACABgAAQABAAEAAAACABkAAQABAAEAAAACABoAAQABAAEAAAACABsAAQABAAEAAAACABwAAQABAAEAAAACAB0AAQABAAEAAAADABgAAQABAAEAAAADABkAAQABAAEAAAADABoAAQABAAEAAAADABsAAQABAAEAAAADABwAAQABAAEAAAADAB0AAQABAAEAAAAEABgAAQABAAEAAAAEABkAAQABAAEAAAAEABoAAQABAAEAAAAEABsAAQABAAEAAAAEABwAAQABAAEAAAAEAB0AAQABAAEAAAAFABgAAQABAAEAAAAFABkAAQABAAEAAAAFABoAAQABAAEAAAAFABsAAQABAAEAAAAFABwAAQABAAEAAAAFAB0AAQABAAEAAAAGABgAAQABAAEAAAAGABkAAQABAAEAAAAGABoAAQABAAEAAAAGABsAAQABAAEAAAAGABwAAQABAAEAAAAGAB0AAQABAAEAAAAHABgAAQABAAEAAAAHABkAAQABAAEAAAAHABoAAQABAAEAAAAHABsAAQABAAEAAAAHABwAAQABAAEAAAAHAB0AAQABAAEAAAAIABgAAQABAAEAAAAIABkAAQABAAEAAAAIABoAAQABAAEAAAAIABsAAQABAAEAAAAIABwAAQABAAEAAAAIAB0AAQABAAEAAAAJABgAAQABAAEAAAAJABkAAQABAAEAAAAJABoAAQABAAEAAAAJABsAAQABAAEAAAAJABwAAQABAAEAAAAJAB0AAQABAAEAAAAKABkAAQABAAEAAAAKABoAAQABAAEAAAAKABsAAQABAAEAAAAKABwAAQABAAEAAAAKAB0AAQABAAEAAAALABkAAQABAAEAAAALABoAAQABAAEAAAALABsAAQABAAEAAAALABwAAQABAAEAAAALAB0AAQABAAEAAAAMABkAAQABAAEAAAAMABoAAQABAAEAAAAMABsAAQABAAEAAAAMABwAAQABAAEAAAAMAB0AAQABAAEAAAANABkAAQABAAEAAAANABoAAQABAAEAAAANABsAAQABAAEAAAANABwAAQABAAEAAAANAB0AAQABAAEAAAAOABkAAQABAAEAAAAOABoAAQABAAEAAAAOABsAAQABAAEAAAAOABwAAQABAAEAAAAOAB0AAQABAAEAAAAAAB4AAQABAAEAAAAAAB8AAQABAAEAAAAAACAAAQABAAEAAAAAACEAAQABAAEAAAABAB4AAQABAAEAAAABAB8AAQABAAEAAAABACAAAQABAAEAAAABACEAAQABAAEAAAACAB4AAQABAAEAAAACAB8AAQABAAEAAAACACAAAQABAAEAAAACACEAAQABAAEAAAADAB4AAQABAAEAAAADAB8AAQABAAEAAAADACAAAQABAAEAAAADACEAAQABAAEAAAAEAB4AAQABAAEAAAAEAB8AAQABAAEAAAAEACAAAQABAAEAAAAEACEAAQABAAEAAAAFAB4AAQABAAEAAAAFAB8AAQABAAEAAAAFACAAAQABAAEAAAAFACEAAQABAAEAAAAGAB4AAQABAAEAAAAGAB8AAQABAAEAAAAGACAAAQABAAEAAAAGACEAAQABAAEAAAAHAB4AAQABAAEAAAAHAB8AAQABAAEAAAAHACAAAQABAAEAAAAHACEAAQABAAEAAAAIAB4AAQABAAEAAAAIAB8AAQABAAEAAAAIACAAAQABAAEAAAAIACEAAQABAAEAAAAJAB4AAQABAAEAAAAJAB8AAQABAAEAAAAJACAAAQABAAEAAAAJACEAAQABAAEAAAAKAB4AAQABAAEAAAAKAB8AAQABAAEAAAAKACAAAQABAAEAAAAKACEAAQABAAEAAAALAB4AAQABAAEAAAALAB8AAQABAAEAAAALACAAAQABAAEAAAALACEAAQABAAEAAAAMAB4AAQABAAEAAAAMAB8AAQABAAEAAAAMACAAAQABAAEAAAAMACEAAQABAAEAAAANAB4AAQABAAEAAAANAB8AAQABAAEAAAANACAAAQABAAEAAAANACEAAQABAAEAAAAOAB4AAQABAAEAAAAOAB8AAQABAAEAAAAOACAAAQABAAEAAAAOACEAAQABAAEAAAAAACIAAQABAAEAAAAAACMAAQABAAEAAAAAACQAAQABAAEAAAAAACUAAQABAAEAAAAAACYAAQABAAEAAAAAACcAAQABAAEAAAAAACgAAQABAAEAAAABACIAAQABAAEAAAABACMAAQABAAEAAAABACQAAQABAAEAAAABACUAAQABAAEAAAABACYAAQABAAEAAAABACcAAQABAAEAAAABACgAAQABAAEAAAACACIAAQABAAEAAAACACMAAQABAAEAAAACACQAAQABAAEAAAACACUAAQABAAEAAAACACYAAQABAAEAAAACACcAAQABAAEAAAACACgAAQABAAEAAAADACIAAQABAAEAAAADACMAAQABAAEAAAADACQAAQABAAEAAAADACUAAQABAAEAAAADACYAAQABAAEAAAADACcAAQABAAEAAAADACgAAQABAAEAAAAEACIAAQABAAEAAAAEACMAAQABAAEAAAAEACQAAQABAAEAAAAEACUAAQABAAEAAAAEACYAAQABAAEAAAAEACcAAQABAAEAAAAEACgAAQABAAEAAAAFACIAAQABAAEAAAAFACMAAQABAAEAAAAFACQAAQABAAEAAAAFACUAAQABAAEAAAAFACYAAQABAAEAAAAFACcAAQABAAEAAAAFACgAAQABAAEAAAAGACIAAQABAAEAAAAGACMAAQABAAEAAAAGACQAAQABAAEAAAAGACUAAQABAAEAAAAGACYAAQABAAEAAAAGACcAAQABAAEAAAAGACgAAQABAAEAAAAHACIAAQABAAEAAAAHACMAAQABAAEAAAAHACQAAQABAAEAAAAHACUAAQABAAEAAAAHACYAAQABAAEAAAAHACcAAQABAAEAAAAHACgAAQABAAEAAAAIACIAAQABAAEAAAAIACMAAQABAAEAAAAIACQAAQABAAEAAAAIACUAAQABAAEAAAAIACYAAQABAAEAAAAIACcAAQABAAEAAAAIACgAAQABAAEAAAAJACIAAQABAAEAAAAJACMAAQABAAEAAAAJACQAAQABAAEAAAAJACUAAQABAAEAAAAJACYAAQABAAEAAAAJACcAAQABAAEAAAAJACgAAQABAAEAAAAKACIAAQABAAEAAAAKACMAAQABAAEAAAAKACQAAQABAAEAAAAKACUAAQABAAEAAAAKACYAAQABAAEAAAAKACcAAQABAAEAAAAKACgAAQABAAEAAAALACIAAQABAAEAAAALACMAAQABAAEAAAALACQAAQABAAEAAAALACUAAQABAAEAAAALACYAAQABAAEAAAALACcAAQABAAEAAAALACgAAQABAAEAAAAMACIAAQABAAEAAAAMACMAAQABAAEAAAAMACQAAQABAAEAAAAMACUAAQABAAEAAAAMACYAAQABAAEAAAAMACcAAQABAAEAAAAMACgAAQABAAEAAAANACIAAQABAAEAAAANACMAAQABAAEAAAANACQAAQABAAEAAAANACUAAQABAAEAAAANACYAAQABAAEAAAANACcAAQABAAEAAAANACgAAQABAAEAAAAOACIAAQABAAEAAAAOACMAAQABAAEAAAAOACQAAQABAAEAAAAOACUAAQABAAEAAAAOACYAAQABAAEAAAAOACcAAQABAAEAAAAOACgAAQABAAEAAAAIAA8AAQAAAAEAAAAEAA4AAQABAAEAAAAIAA4AAQABAAEAAAAGAA8AAQAAAAEAAAAHAA8AAQAAAAEAAAAEAA0AAQACAAEAAAAIAA0AAQADAAEAAAAFAA4AAQABAAEAAAAGAA4AAQABAAEAAAAHAA4AAQABAAEAAAA=")
tile_set = ExtResource("3_77cwb")
rendering_quadrant_size = 32

[node name="bridge" parent="decor" instance=ExtResource("4_ajfhn")]
position = Vector2(289, 337)
_number_subBridge = 5

[node name="Handle" parent="decor" node_paths=PackedStringArray("bridge") instance=ExtResource("5_ojdwi")]
position = Vector2(308, 333)
bridge = NodePath("../bridge")

[node name="drone" parent="decor" instance=ExtResource("6_i0xx1")]
position = Vector2(142, 147)
sync_to_physics = false
distance = Vector2(170, 0)

[node name="Node2D" type="Node2D" parent="decor"]
position = Vector2(5, -62)

[node name="wastes" parent="decor/Node2D" instance=ExtResource("7_dii1g")]
position = Vector2(142, 483)
rotation = 0.843636

[node name="wastes2" parent="decor/Node2D" instance=ExtResource("7_dii1g")]
position = Vector2(168, 500)

[node name="wastes3" parent="decor/Node2D" instance=ExtResource("7_dii1g")]
position = Vector2(201, 501)

[node name="wastes4" parent="decor/Node2D" instance=ExtResource("7_dii1g")]
position = Vector2(236, 500)

[node name="wastes5" parent="decor/Node2D" instance=ExtResource("7_dii1g")]
position = Vector2(261, 486)
rotation = -0.795242

[node name="Burger" parent="decor" instance=ExtResource("8_5bdwh")]
position = Vector2(421, 144)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(240, 217.5)
scale = Vector2(24, 11.85)

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
